# pithos-js

./: .editorconfig  .eslintrc.json  .gitignore  meson.build
data/: io.github.Pithos.json  meson.build
lib/: meson.build  pithos-crypt.c  pithos-crypt.h
po/: POTFILES  meson.build
src/: client.js  main.css  main.js  songRow.js  songRow.ui  window.js  window.ui
